--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Appsolute Chaos</string>
-    <string name="primary_title">Chaos Game Instructions</string>
-    <string name="primary_description">Welcome to Appsolute Chaos! This is a challenging Android XR game where you must read instructions and click the correct button while the window moves around you every 3 seconds. Stay focused, read carefully, and click the right button to advance to the next level. Wrong clicks will reset you back to level 1!</string>
-    <string name="secondary_title">Game Rules</string>
-    <string name="secondary_description">The window will randomly move around you every 3 seconds. Each time it moves, the buttons change their text, color, size, and position. Find and click the button specified in the instructions to advance. Good luck!</string>
+    <string name="primary_title">Primary card title</string>
+    <string name="primary_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel lorem augue. Integer dapibus fermentum varius. Quisque non pellentesque diam. Fusce ac posuere dui. Nullam in congue lacus, at viverra felis. Duis dapibus mi sed orci rutrum ornare. Nunc ac fringilla enim. Fusce tempor nec dui vitae placerat.\n\nEtiam sit amet auctor massa, sit amet dictum lacus. Donec ac rutrum justo, sit amet condimentum tortor. Nam vitae molestie nisi. Nam vestibulum mi euismod euismod tristique. Mauris ut lorem vestibulum, blandit neque et, iaculis velit. Donec pulvinar dignissim placerat. Vivamus tincidunt feugiat sagittis. Mauris pellentesque dui vel arcu pulvinar tempus. Pellentesque consequat ultrices nisl sed fringilla. Aenean vitae mauris ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce at facilisis turpis, vitae varius risus. Cras a tellus vehicula, porttitor nunc tincidunt, dignissim orci. Etiam ornare enim ut urna interdum fringilla. Donec ultricies imperdiet nisi, quis sollicitudin diam faucibus vitae. In vitae feugiat mi, mattis convallis est.</string>
+    <string name="secondary_title">Secondary card title</string>
+    <string name="secondary_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ante mi, accumsan eu lacus ut, eleifend interdum est. Aenean consectetur orci ac ex fermentum faucibus.</string>
 </resources>
